Fix title alignment for DLF landing page

--- a/_sass/_dlf.scss
+++ b/_sass/_dlf.scss
@@ -157,6 +157,7 @@
         color: #444;
         margin-top: 10px;
         margin-bottom: 10px;
+        clear: inherit;
       }
     }
   }
@@ -234,6 +235,7 @@
 
   .home_blog_title {
     margin-top: 20px;
+    clear: inherit;
   }
 
   .postmeta {
